# pmem-olap

./: .gitignore  README.md
microbenchmarks/: CMakeLists.txt  README.md  main.c
microbenchmarks/benchmark/: bw_benchmark.c  parsing.c  pmem_mapping.c  read_bw_benchmark.c  thread_mapping.c  write_bw_benchmark.c
microbenchmarks/cmake/: FindLibpmem.cmake  FindLibpmem2.cmake
microbenchmarks/include/: bw_benchmark.h  common.h  parsing.h  pmem_mapping.h  read_bw_benchmark.h  thread_mapping.h  unrolled_instructions.h  write_bw_benchmark.h
microbenchmarks/mapping_files/: socket_1_split  socket_2_linear  socket_2_split
plot_scripts/: README.md  common.py  heatmap.py  mixed_performance.py  multiple_sockets.py  optimal_access_size.py  pinning_variants.py  random_access.py  requirements.txt  ssb_detail.py  ssb_full.py  ssb_worker.py  warm_up_behavior.py
scripts/microbenchmarks/: all_benchmarks.sh  all_benchmarks_dram.sh  benchmark.sh  example.sh  random_write.sh  read_benchmark.sh  sequential_read.sh  sequential_write.sh
scripts/reproducibility/: README.txt  microbenchmarks-random.sh  microbenchmarks.sh
scripts/ssb/: run_ssb.sh
ssb/: README.md  common.hpp  init_dash.sh  pmem_ht.hpp  ssd_ht.hpp
ssb/handcrafted/: Makefile  README.md  common.hpp  dash_ssb.patch  dram_ht.hpp  init_dash.sh  ssb.cpp
ssb/hyrise-dram/: CMakeLists.txt  README.md  nvm.json
ssb/hyrise-dram/cmake/: FindLibpmem.cmake  FindLibpmem2.cmake  FindMemkind.cmake  FindTbb.cmake
ssb/hyrise-dram/src/: CMakeLists.txt
ssb/hyrise-dram/src/benchmark/: tpch_benchmark.cpp
ssb/hyrise-dram/src/benchmarklib/: abstract_table_generator.hpp  benchmark_runner.cpp
ssb/hyrise-dram/src/benchmarklib/tpch/: tpch_benchmark_item_runner.hpp
ssb/hyrise-dram/src/lib/: CMakeLists.txt  hyrise.cpp
ssb/hyrise-dram/src/lib/memory/: kind_memory_manager.cpp  nvm_memory_resource.cpp  nvm_memory_resource.hpp
ssb/hyrise-dram/src/lib/statistics/: cardinality_estimator.cpp
ssb/hyrise-dram/src/lib/storage/: table.hpp
ssb/hyrise-dram/src/lib/utils/: log_manager.cpp
ssb/hyrise-dram/src/plugins/: CMakeLists.txt
ssb/hyrise-pmem/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  nvm.json  version.hpp
ssb/hyrise-pmem/cmake/: FindReadline.cmake  FindSqlite3.cmake
ssb/hyrise-pmem/queries/: q11.sql  q12.sql  q13.sql  q21.sql  q22.sql  q23.sql  q31.sql  q32.sql  q33.sql  q34.sql  q41.sql  q42.sql  q43.sql
ssb/hyrise-pmem/resources/benchmark/tpch/: schema.sql
ssb/hyrise-pmem/src/: CMakeLists.txt  Makefile  SSB_instructions.md  cmake_install.cmake
ssb/hyrise-pmem/src/benchmark/: Makefile  cmake_install.cmake  file_based_benchmark.cpp
ssb/hyrise-pmem/src/benchmarklib/: Makefile  abstract_table_generator.cpp  benchmark_runner.cpp  cmake_install.cmake
ssb/hyrise-pmem/src/benchmarklib/tpch/: tpch_benchmark_item_runner.cpp  tpch_queries.cpp  tpch_table_generator.cpp  tpch_table_generator.hpp
ssb/hyrise-pmem/src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  git-state
ssb/hyrise-pmem/src/lib/memory/: dram_memory_resource.cpp  kind_memory_manager.hpp  nvm_memory_resource.cpp  (+1 more)
ssb/hyrise-pmem/src/plugins/: CMakeLists.txt  Makefile  cmake_install.cmake
ssb/hyrise-pmem/src/test/: Makefile  cmake_install.cmake
(+32 files in other folders)
